--- a/packages/user_repository/pubspec.yaml
+++ b/packages/user_repository/pubspec.yaml
@@ -12,12 +12,15 @@ dependencies:
     sdk: flutter
   http: 
   # dartz: ^0.9.2
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  dio: ^5.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-
+  build_runner: 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
