--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   hive: ^2.2.3
+  hive_flutter: 
   # http: ^1.2.0
   flutter_bloc: ^8.1.4
   bloc: 
@@ -50,11 +51,14 @@ dependencies:
   crypto: ^3.0.3
   top_snackbar_flutter: ^3.1.0
   awesome_snackbar_content: ^0.1.1
+  dialog_alert: ^0.0.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  hive_generator: ^1.1.3
+  build_runner: ^2.1.11
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
