--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   user_repository:
       path: packages/user_repository
+  trips_repository:
+      path: packages/trips_repository
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
